--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "vite": "^5.4.11",
     "vitepress": "^1.5.0",
     "vitest": "^2.1.8",
-    "vue-tsc": "~2.1.10"
+    "vue-tsc": "^3.2.1"
   },
   "pnpm": {
     "overrides": {
